package main.views.pages;

import main.views.pages.ExamsView;
import main.views.pages.NewExamView;
import main.views.components.NavBar;
import main.views.components.CourseItem;
import main.views.components.Button;

public class AdminExamView {
    
}
