package main.views.pages;

import main.views.pages.ExamEndedView;
import main.controllers.PresentExamController;

public class ResultView {
    //  private void showScore(Result)(){}
}
